signin and signup method improved and redirecting query added

--- a/FrontEnd/src/app/signin/signin.component.html
+++ b/FrontEnd/src/app/signin/signin.component.html
@@ -7,4 +7,4 @@
         <div id="emailpasswordsuggestion"></div>
     </form>
 </div>
-<img src="https://robohash.org/a" alt="profile pic">
+<div id="fromwhere"></div>
