--- a/FrontEnd/src/app/topbar/topbar.component.html
+++ b/FrontEnd/src/app/topbar/topbar.component.html
@@ -16,4 +16,4 @@
         <button (click) = "logout()">log</button>
     </div>
 </div>
-    
+<button routerLink="/uploadpage">Upload you project!</button>
