--- a/FrontEnd/src/app/topbar/topbar.component.html
+++ b/FrontEnd/src/app/topbar/topbar.component.html
@@ -1,19 +1,22 @@
-<p>projectchaapo.com</p>
-<p>ye original project hai sir </p>
-<div id="signinsignup">
-    <div routerLink="/signup">
-        Sign Up!
+<div style="border: solid black 1px;">
+    <p>projectchaapo.com</p>
+    <p>ye original project hai sir </p>
+    <div id="signinsignup">
+        <div routerLink="/signup">
+            Sign Up!
+        </div>
+        <div routerLink="/signin">
+            Sign In
+        </div>
     </div>
-    <div routerLink="/signin">
-        Sign In
+    <button routerLink="/uploadpage">Upload you project!</button>
+    <div id="profilepicturelogoutbutton">
+        <div>
+            <img style="width:50px; height: 50px;" src="https://robohash.org/{{name}}" alt="pic"/>
+        </div>
+        <div>
+            <button (click) = "logout()">log</button>
+        </div>
     </div>
+
 </div>
-<div id="profilepicturelogoutbutton">
-    <div>
-        <img style="width:50px; height: 50px;" src="https://robohash.org/{{name}}" alt="pic"/>
-    </div>
-    <div>
-        <button (click) = "logout()">log</button>
-    </div>
-</div>
-<button routerLink="/uploadpage">Upload you project!</button>
