--- a/FrontEnd/src/app/uploadpage/uploadpage.component.html
+++ b/FrontEnd/src/app/uploadpage/uploadpage.component.html
@@ -1,3 +1,26 @@
 <app-topbar></app-topbar>
-<p>uploadpage works!</p>
-   <input type="file" id="fileInput" />
+<form #f="ngForm">
+    Project Name: <input type="text" name="pn" [(ngModel)]="projname"/>
+   <div id="projnamesug"></div>
+
+   Github Link: <input type="text" name="gtl" [(ngModel)]="projgithublink"/>
+   <div id="projgithublinksug"></div>
+
+   Description: <textarea id="projectdescription"></textarea>
+   <div id="projdescriptionsug"></div>
+
+   How to Setup: <textarea id="projecthowtosetup"></textarea>
+   <div id="projhowtosetupsug"></div>
+
+   Tags(Comma seperated keywords to get discovered): 
+   <textarea id="projecttags"></textarea>
+   <div id="projtagssug"></div>
+
+   Select Images of your project: 
+   <input type="file" multiple name="uploader" accept=".jpg, .png, .jpeg|image/*" (change)="getimages($event)">
+   <div id="projuploadersug"></div>
+   
+   <button (click)="sendprojdetails()">Submit</button>
+   
+</form>
+
