upload , like done

--- a/FrontEnd/src/app/projectpage/projectpage.component.html
+++ b/FrontEnd/src/app/projectpage/projectpage.component.html
@@ -1,1 +1,12 @@
-<p>projectpage works!</p>
+<app-topbar></app-topbar>
+
+{{this.email}}
+{{this.projname}}
+{{this.projdescription}}
+{{this.projgithublink}}
+{{this.projhowtosetup}}
+{{this.likes}}
+{{this.comments}}
+{{this.date}}
+
+<div style="color: gray;" id="likeicon"(click)="likeproject()">like</div>
