--- a/FrontEnd/src/app/topbar/topbar.component.html
+++ b/FrontEnd/src/app/topbar/topbar.component.html
@@ -1,7 +1,7 @@
 <div style="border: solid black 1px;">
     <p>projectchaapo.com</p>
     <p>ye original project hai sir </p>
-    <div id="signinsignup">
+    <div id="signinsignup" style="display: none;">
         <div routerLink="/signup">
             Sign Up!
         </div>
@@ -10,12 +10,12 @@
         </div>
     </div>
     <button routerLink="/uploadpage">Upload you project!</button>
-    <div id="profilepicturelogoutbutton">
+    <div id="profilepicturelogoutbutton" style="display: none;">
         <div>
             <img style="width:50px; height: 50px;" src="https://robohash.org/{{name}}" alt="pic"/>
         </div>
         <div>
-            <button (click) = "logout()">log</button>
+            <button (click) = "logout()">Logout</button>
         </div>
     </div>
 
