home page and minor bugs here and there

--- a/FrontEnd/src/app/profilepage/profilepage.component.html
+++ b/FrontEnd/src/app/profilepage/profilepage.component.html
@@ -1,5 +1,8 @@
 <app-topbar></app-topbar>
 <button id="changepassword" (click)="changepassword()" style="display: none;">Change password</button>
+<div style="display: none;" id="logout">
+    <button (click) = "logout()" class="button" >Logout</button>
+</div>
 <div id="emailsent"  style="display: none;">Email sent</div>
 <div id="projsgohere">
 
