--- a/FrontEnd/src/app/topbar/topbar.component.html
+++ b/FrontEnd/src/app/topbar/topbar.component.html
@@ -1,26 +1,31 @@
-<div style="background-color: white;border-radius: 10px;width: 90%; height:50px">
-    <p routerLink="/" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">projectchaapo.com</p>
-    <p>ye original project hai sir </p>
-    <div id="signinsignup" style="display: none;">
+<div style="display: flex; justify-content: space-evenly; height: 50px;
+align-content: space-around; background-color: black;border-radius: 5px;width: 80%; margin:auto;  padding: 15px; margin-top:5px ;">
+    <a href="/" style="text-decoration: none;">
+        <p style="margin-left: 50px; color: white; font-family:cursive; font-size: 20px; cursor: pointer; margin-top: 10px;">projectchaapo.com</p>
+    </a>
+
+    <button routerLink="/uploadpage" class="button" style=" margin: auto; cursor: pointer;">Upload your project!</button>
+    <div id="api" style="margin-right: 50px;font-size: 10px; background-color: red; padding: 2px;width: 87px; height: 50px;color: white; border-radius: 2px;">
+    
+    </div>
+    <div id="signinsignup" style="display: none; float: right; cursor: pointer; color: white; margin-top: 2px; margin-right: 20px;">
         <div routerLink="/signup">
-            Sign Up!
+            Sign Up
         </div>
+        <div style="height: 10px;"></div>
         <div routerLink="/signin">
             Sign In
         </div>
     </div>
-    <button routerLink="/uploadpage">Upload you project!</button>
-    <div id="profilepicturelogoutbutton" style="display: none;">
-        <div>
+    <div id="profilepicturelogoutbutton" style="display: none; float: right; margin-right: 20px;">
+        <div style="display: inline-block;">
             <a href="/profilepage?user={{email}}">
-                <img style="width:50px; height: 50px;" src="https://robohash.org/{{name}}" alt="pic"/>
-                {{name}}
+                <img style="width:50px; height: 50px;" src="https://robohash.org/{{name}}" alt="pic"/><br>
             </a>
         </div>
-        <div>
-            <button (click) = "logout()">Logout</button>
-        </div>
+        
     </div>
 
 </div>
-<div style="height: 100px;"></div>
+<div style="height: 15px;"></div>
+
