--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,19 +1,36 @@
 <form #f="ngForm">
-    <input type="text" name="ser" [(ngModel)]="searchterm"/>
-    <button (click)="search()">Search</button>
+    <div style="margin: auto; width: 700px;">
+        <input type="text" name="ser" placeholder="        Search your mind out!" [(ngModel)]="searchterm" style="font-size: 15px;height: 30px; border-radius: 3px;width: 600px; "/>
+        <button (click)="search()" class="button" style="border-radius: 2px; ">></button>
+    </div>
 </form>
-<div id="projs">
-    
+
+<div style="margin-top: 20px;">
+    <div id="projs" style="position: absolute;">
+        
+    </div>
+    <div style="display: flex;
+    justify-content: space-evenly;
+    align-content: space-around;
+    width: 80%;
+    margin: 0 auto;
+    flex-wrap: wrap; position: relative;  z-index: -1;">
+    <img #a alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #b alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #c alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #d alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #e alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #z alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #g alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #h alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    </div>
 </div>
+<div style="height: 20px;"></div>
 
-<img #a alt="" style="height:300px;width:300px;"/>
-<img #b alt="" style="height:300px;width:300px;"/>
-<img #c alt="" style="height:300px;width:300px;"/>
-<img #d alt="" style="height:300px;width:300px;"/>
-<img #e alt="" style="height:300px;width:300px;"/>
-<img #z alt="" style="height:300px;width:300px;"/>
-<img #g alt="" style="height:300px;width:300px;"/>
-<img #h alt="" style="height:300px;width:300px;"/>
-
-
-<div id="pages"></div>
+<div id="pages" style="position: sticky;
+margin:auto;
+text-decoration: none;
+bottom: 0;
+color: white;
+width: 20%;
+text-align: center;display: flex; align-items: center; justify-content: space-evenly;align-content:space-evenly;font-size: 17px;"></div>
