minor bugs & home, profile, signup sign in, upload, forgot pass window design

--- a/FrontEnd/src/app/changepassword/changepassword.component.html
+++ b/FrontEnd/src/app/changepassword/changepassword.component.html
@@ -1,4 +1,6 @@
-<form #f="ngForm">
-    Enter new password<input type="text" name="newpass" [(ngModel)]="password">
-    <button (click)="newpass()">Change Password</button>
-</form>
+<div style="padding: 30px; width: 300px; height: 50px; border: 1px solid black; border-radius: 25px; margin:auto;margin-top: 100px;background-color: lightgray;">
+    <form #f="ngForm">
+        Enter new password: <input type="text" name="newpass" [(ngModel)]="password" style="border-radius: 2px;">
+        <button (click)="newpass()" style="background-color: white;border-radius: 10px; padding: 5px; cursor: pointer;">Change Password</button>
+    </form>
+</div>
