--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <form #f="ngForm">
     <div style="margin: auto; width: 700px;">
-        <input type="text" name="ser" placeholder="        Search your mind out!" [(ngModel)]="searchterm" style="font-size: 15px;height: 30px; border-radius: 3px;width: 600px; "/>
-        <button (click)="search()" class="button" style="border-radius: 2px; ">></button>
+        <input type="text" name="ser" placeholder="        Search your mind out!" [(ngModel)]="searchterm" style="border:1px solid black ;font-size: 15px;height: 30px; border-radius: 3px;width: 600px; "/>
+        <button (click)="search()" class="button" style="border-radius: 1px; ">></button>
     </div>
 </form>
 
