--- a/FrontEnd/src/app/topbar/topbar.component.html
+++ b/FrontEnd/src/app/topbar/topbar.component.html
@@ -5,7 +5,7 @@ align-content: space-around; background-color: black;border-radius: 5px;width: 8
     </a>
 
     <button routerLink="/uploadpage" class="button" style=" margin: auto; cursor: pointer;">Upload your project!</button>
-    <div id="api" style="margin-right: 50px;font-size: 10px; background-color: red; padding: 2px;width: 87px; height: 50px;color: white; border-radius: 2px;">
+    <div id="api" style="font-family: 'Times New Roman', Times, serif; margin-right: 50px;font-size: 10px; background-color: red; padding: 2px;width: 87px; height: 50px;color: white; border-radius: 2px;">
     
     </div>
     <div id="signinsignup" style="display: none; float: right; cursor: pointer; color: white; margin-top: 2px; margin-right: 20px;">
