--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -15,14 +15,14 @@
     width: 80%;
     margin: 0 auto;
     flex-wrap: wrap; position: relative;  z-index: -1;">
-    <img #a alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #b alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #c alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #d alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #e alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #z alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #g alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
-    <img #h alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;"/>
+    <img #a alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #b alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #c alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #d alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #e alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #z alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #g alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
+    <img #h alt=" " style="height:250px;width:250px; border-radius: 25px;margin-top: 15px;object-fit: cover; "/>
     </div>
 </div>
 <div style="height: 20px;"></div>
