--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -1,5 +1,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    text-decoration: none;    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
