--- a/FrontEnd/src/app/topbar/topbar.component.html
+++ b/FrontEnd/src/app/topbar/topbar.component.html
@@ -1,7 +1,7 @@
 <div style="display: flex; justify-content: space-evenly; height: 50px;
 align-content: space-around; background-color: black;border-radius: 5px;width: 80%; margin:auto;  padding: 15px; margin-top:5px ;">
     <a href="/" style="text-decoration: none;">
-        <p style="margin-left: 50px; color: white; font-family:cursive; font-size: 20px; cursor: pointer; margin-top: 10px;">projectofprojects.com</p>
+        <p style="margin-left: 50px; color: white; font-family:cursive; font-size: 20px; cursor: pointer; margin-top: 10px;">projectchaapo</p>
     </a>
 
     <button routerLink="/uploadpage" class="button" style=" margin: auto; cursor: pointer;">Upload your project!</button>
